fix for safari text-align

--- a/css/vc64.css
+++ b/css/vc64.css
@@ -134,8 +134,9 @@ background-color: var(--green) !important;
     border-color: var(--darkbg);
     color: var(--darkbg) !important;
     font-size: 15px;
-    text-align: center; /* does not work in safari*/
-    padding-left: 6px;
+    text-align: center;
+    text-align-last: center;
+    padding-left: 1px;
     padding-right: 1px;
 }
 
